--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "animate.css": "^3.5.2",
     "bootstrap": "3.3.7",
     "core-js": "^2.4.1",
-    "ng2-bootstrap": "^1.1.16-10",
+    "ng2-bootstrap": "^1.4.0",
     "rxjs": "^5.1.0",
     "sockjs-client": "^1.0.3",
+    "vertx3-eventbus-client": "3.4.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.6"
   },
@@ -45,6 +46,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-coverage-istanbul-reporter": "^0.2.0",
+    "ngrx-store-freeze": "^0.1.6",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
