Added Record functionality

--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "@angular/router": "^3.4.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
+    "@types/lodash": "^4.14.57",
     "@types/sockjs-client": "^1.0.30",
     "animate.css": "^3.5.2",
     "bootstrap": "3.3.7",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "ng2-bootstrap": "^1.4.0",
+    "reselect": "^2.5.4",
     "rxjs": "^5.1.0",
     "sockjs-client": "^1.0.3",
-    "vertx3-eventbus-client": "3.4.0",
     "ts-helpers": "^1.1.1",
+    "vertx3-eventbus-client": "3.4.0",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
