--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@types/lodash": "^4.14.57",
     "@types/sockjs-client": "^1.0.30",
     "animate.css": "^3.5.2",
-    "bootstrap": "3.3.7",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
-    "ng2-bootstrap": "^1.6.1",
+    "ngx-bootstrap": "^2.0.0-beta.8",
     "reselect": "^2.5.4",
     "rxjs": "^5.1.0",
     "sockjs-client": "^1.0.3",
